mobile logo scaling fix
fixed an issue where logos could be stretched out of proportions on
mobile devices

--- a/frontend/src/css/custom-bootstrap.scss
+++ b/frontend/src/css/custom-bootstrap.scss
@@ -1183,6 +1183,7 @@ body {
 			#header {
 				margin: 0 auto;
 				justify-content: center;
+				min-height: auto;
 			}
 
 		/* Logo */
@@ -1194,10 +1195,16 @@ body {
 
 			#logo .image {
 				max-width: 90%;
+				max-height: 5em;
+				height: auto;
+				width: auto;
 			}
 
 			#logo .image img {
 				max-width: 100%;
+				max-height: 5em;
+				height: auto;
+				width: 100%;
 			}
 
 			#logo span {
